[project]
name = "owui"
version = "0.0.1"
dependencies = [
    "nicegui",
    "ollama",
]
authors = [
  { name="Curtis Lee Bolin", email="CurtisLeeBolin@gmail.com" },
]
description = "Ollama WebUI"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CurtisLeeBolin/owui"
"Bug Tracker" = "https://github.com/CurtisLeeBolin/owui/issues"

[project.scripts]
owui = "owui:main"
